PhraseService/K8s/Quote-04-Deployment-Frontend-ConfigMap.yaml
apiVersion: apps/v1
kind: Deployment

# kubectl apply -f PhraseService/K8s/Quote-04-Deployment-Frontend-ConfigMap.yaml
# kubectl delete -f PhraseService/K8s/Quote-04-Deployment-Frontend-ConfigMap.yaml

metadata:                               ### Описание деплоймента
  name: quote-frontend-deployment                # Название деплоймента (будет использоваться в автоселлере)
  labels:                               # Лейбл деплоймента
    app: quote-app
    
spec:                                   ### Спецификация
  selector:                             # С какими подами будет работать деплоймент должны совпадать с (template/metadata/labels)

    matchLabels:                        # С какими лейблами подов будет работать деплоймент
      app: quote-frontend-pod

  template:                             ### Описание подов

    metadata:                           ## Описание пода
      labels:                           # Лейблы подов Должны совпадать с selector
        app: quote-frontend-pod                  #! Сервис будет искать поды с этими лейблы, чтобы на них распределять трафик

    spec:
      containers:                       # Какие контейнеры будут запускаться в подах

      - name: quote-frontend-container           # Контейнер
        image: nginxinc/nginx-unprivileged:latest
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080             #!! Порт на поде (nginx-unprivileged)
          name: http
          protocol: TCP

        volumeMounts:
        - name: config-html
          mountPath: /usr/share/nginx/html  # /index.html

        - name: config-nginx
          mountPath: /etc/nginx             # /nginx.conf

      volumes:
      - name: config-html
        configMap:
          name: frontend-config-html

      - name: config-nginx
        configMap:
          name: frontend-config-nginx
