PhraseService/K8s/Quote-03-Service-Backend.yaml
apiVersion: v1                          ### Описание Сервиса
kind: Service

# kubectl apply -f PhraseService/K8s/Quote-03-Service-Backend.yaml
# kubectl delete -f PhraseService/K8s/Quote-03-Service-Backend.yaml

metadata:                               # Имя сервиса
  name: phraseservice-server            # !!! Должен совпадать с именем сервера в nginx.conf
  labels:
    app: quote-app

spec:
  selector:
    app: quote-backend-pod                      #! На поды с какими лейблами будет работать сервис, распространять трафик

  ports:
    - protocol: TCP
      port: 3000                          # Какой порт будет на сервисе
      targetPort: 3000                    #!! Порт на поде
